# FLAP

./: .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.bsd-2.md  LICENSE.bsd-3.md  LICENSE.mit.md  README.md  cliff.toml  codecov.yml  css  fobos  fonts  ford.html  fpm.toml  hashmap.json  index.html  interface  js  lists  makedoc.sh  makefile  module  params.json  proc  program  run_tests.sh  search.html  sourcefile  src  tipuesearch  type
CMake/: FLAPConfig.cmake.in
api/: index.html
assets/: api_index.md.C_83Aoe4.js  api_index.md.C_83Aoe4.lean.js  api_src_lib_flap.md.D_fNM74o.js  api_src_lib_flap_command_line_argument_t.md.CRr9E2qg.js  api_src_lib_flap_command_line_argument_t.md.CRr9E2qg.lean.js  api_src_lib_flap_command_line_arguments_group_t.md.Ca6x2LRn.js  api_src_lib_flap_command_line_arguments_group_t.md.Ca6x2LRn.lean.js  api_src_lib_flap_command_line_interface_t.md.C3gva-J7.js  api_src_lib_flap_command_line_interface_t.md.C3gva-J7.lean.js  api_src_lib_flap_object_t.md.DlWKVNXt.js  api_src_lib_flap_object_t.md.DlWKVNXt.lean.js  api_src_lib_flap_utils_m.md.1AEz2l7O.js  api_src_lib_flap_utils_m.md.1AEz2l7O.lean.js  api_src_third_party_FACE_src_lib_face.md.DPPo-pCa.js  api_src_third_party_FACE_src_lib_face.md.DPPo-pCa.lean.js  api_src_third_party_PENF_src_lib_penf.md.CNVKhWhk.js  api_src_third_party_PENF_src_lib_penf.md.CNVKhWhk.lean.js  api_src_third_party_PENF_src_lib_penf_allocatable_memory.md.DaYMIsOZ.js  api_src_third_party_PENF_src_lib_penf_allocatable_memory.md.DaYMIsOZ.lean.js  api_src_third_party_PENF_src_lib_penf_b_size.md.BuKWpyIO.js  api_src_third_party_PENF_src_lib_penf_b_size.md.BuKWpyIO.lean.js  api_src_third_party_PENF_src_lib_penf_global_parameters_variables.md.CxIaM8sE.js  api_src_third_party_PENF_src_lib_penf_global_parameters_variables.md.CxIaM8sE.lean.js  api_src_third_party_PENF_src_lib_penf_stringify.md.DEhtOfCV.js  api_src_third_party_PENF_src_lib_penf_stringify.md.Uq7CRVf9.js  api_src_third_party_PENF_src_lib_penf_stringify.md.Uq7CRVf9.lean.js  api_src_third_party_fortran_tester_src_tester.md.Brl9eY3h.js  api_src_third_party_fortran_tester_src_tester.md.Brl9eY3h.lean.js  app.4rc71x7f.js  app.BVgFCG-L.js  app.Bz3eNCWn.js  app.CQC1C-DU.js  app.D8nMthYQ.js  app.DhmzaTXC.js  app.roH8Nvf9.js  ford.md.BmaXgqbE.js  guide_advanced.md.CYlXP24s.js  guide_advanced.md.CYlXP24s.lean.js  guide_arguments.md.BwJaUqBy.js  guide_arguments.md.BwJaUqBy.lean.js  (+33 more)
doc/: ChangeLog-FLAP.md  ChangeLog-IR_Precision.md  README-FLAP.md  README-IR_Precision.md  main_page.md
docs/: ford.md  index.md  package-lock.json  package.json
graphs/: call~~graph~~CallGraph  module~~data_type_command_line_interface~~UsedByGraph  module~~data_type_command_line_interface~~UsesGraph  module~~graph~~ModuleGraph  proc~~add~~CallsGraph  proc~~check_choices_cla~~CallsGraph  proc~~errored~~CallsGraph  proc~~get_args_from_string~~CallsGraph  proc~~get_cla_list_varying_char~~CallsGraph  proc~~get_cla_list_varying_i1p~~CallsGraph  proc~~get_cla_list_varying_i2p~~CallsGraph  proc~~get_cla_list_varying_i4p~~CallsGraph  proc~~get_cla_list_varying_logical~~CallsGraph  proc~~get_cla_list_varying_r16p~~CallsGraph  proc~~get_cla_list_varying_r4p~~CallsGraph  proc~~get_cla_list~~CallsGraph  proc~~get_cla~~CallsGraph  proc~~parse_clasg~~CallsGraph  proc~~save_man_page~~CallsGraph  proc~~upper_case~~CalledByGraph  program~~test_basic~~CallsGraph  program~~test_choices_logical~~CallsGraph  program~~test_choices_logical~~UsesGraph  program~~test_nested~~CallsGraph  program~~test_nested~~UsesGraph  type~~graph~~TypeGraph  type~~type_command_line_interface~~InheritsGraph
guide/: advanced.html  arguments.html  changelog.html  contributing.html  errors.html  features.html  index.html  install.html  output.html  parsing.html  subcommands.html
interface/: b64_decode.html  b64_encode.html  bcton.html  bit_size.html  bstr.html  byte_size.html  colorize.html  count.html  cton.html  digit.html  str.html  strz.html
lists/: files.html  modules.html  procedures.html  programs.html  types.html
module/: data_type_command_line_interface.html  face.html  flap.html  flap_command_line_argument_t.html  flap_command_line_arguments_group_t.html  flap_command_line_interface_t.html  flap_object_t.html  flap_utils_m.html  ir_precision.html  lib_io_misc.html  lib_strings.html  tester.html
proc/: add.html  add_cla_clasg.html  add_group.html  add_signature.html  add~2.html  assert_close_c32.html  assert_close_c32_1.html  assert_close_c64.html  assert_close_c64_1.html  assert_close_r32.html  assert_close_r32_1.html  assert_close_r64.html  assert_close_r64_1.html  assert_equal_c32.html  assert_equal_c32_1.html  assert_equal_c64.html  assert_equal_c64_1.html  assert_equal_i16.html  assert_equal_i16_1.html  assert_equal_i32.html  assert_equal_i32_1.html  assert_equal_i64.html  assert_equal_i64_1.html  assert_equal_i8.html  assert_equal_i8_1.html  assert_equal_l.html  assert_equal_l_1.html  assert_equal_r32.html  assert_equal_r32_1.html  assert_equal_r64.html  assert_equal_r64_1.html  assert_positive_i16.html  assert_positive_i16_1.html  assert_positive_i32.html  assert_positive_i32_1.html  assert_positive_i64.html  assert_positive_i8.html  (+265 more)
src/lib/: CMakeLists.txt  Data_Type_Command_Line_Interface.F90  IR_Precision.f90  flap.f90  flap_command_line_argument_t.F90  flap_command_line_arguments_group_t.f90  flap_command_line_interface_t.F90  flap_object_t.F90  flap_object_t.f90  flap_utils_m.f90  penf.F90
src/tests/: CMakeLists.txt  flap_test_action_store.f90  flap_test_ansi_color_style.f90  flap_test_choices_logical.f90  flap_test_duplicated_clas.f90  flap_test_group.f90  flap_test_group_examples.f90  flap_test_ignore_unknown_clas.f90  flap_test_minimal.f90  flap_test_nested.f90  flap_test_save_bash_completion.f90  flap_test_save_bash_completition.f90  flap_test_save_man_page.f90  flap_test_save_usage_to_markdown.f90  flap_test_value_missing.f90  test_basic.f90  test_choices_logical.f90  test_group.f90  test_hidden.f90  test_minimal.f90  test_nested.f90  test_string.f90
(+754 files in other folders)
